--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ nav {
     align-items: center;
     justify-content: space-around;
     height: 70px;
+    margin: 0;
+    padding: 0%;
 }
 
 .letramenu {
@@ -45,6 +47,8 @@ h1 {
     animation-timing-function: ease-in;
     animation-duration: 1.5s;
     animation-delay: 0.3s;
+    padding: 0;
+    margin: 0;
 }
 
 #h1index {
@@ -73,8 +77,6 @@ h2 {
 
 #sectionvideo {
     text-align: center;
-
-
 }
 
 #video {
@@ -98,7 +100,7 @@ p {
 #ultimop {
     margin-bottom: 0%;
 }
-
+/*
 .mainindex {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -132,7 +134,7 @@ p {
 .vidapriv {
     grid-area: vidapriv;
 }
-
+*/
 footer {
     background-color: rgb(14, 12, 12);
 }
@@ -144,6 +146,8 @@ footer {
     align-items: center;
     justify-content: space-around;
     height: 40px;
+    padding: 0;
+    margin: 0;
 }
 
 .letrafooter {
@@ -225,7 +229,7 @@ footer {
 .mainnoti img {
     border: solid 5px rgb(255, 179, 1);
 }
-
+/*
 .mainnoti {
     display: grid;
     text-align: center;
@@ -260,11 +264,19 @@ footer {
     grid-area: negro2;
     background-color: #37353b
 }
+*/
+.negro {
+    background-color: #37353b
+}
 
+.negro2 {
+    background-color: #37353b
+}
 @media screen and (max-width: 480px) {
     #sectionvideo {
         display: none;
     }
+    /*
     .mainindex{
         display: grid;
         grid-template-columns: 1fr;
@@ -292,7 +304,7 @@ footer {
     .noti3{
         margin-bottom: 20px
     }
-    
+    */
 }
 @keyframes efecto1 {
     0%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 1%, rgb(255, 179, 1));}
