--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h2 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-decoration: underline;
     color: rgb(255, 179, 1);
-    background-color: black;
+    background-color: rgb(14, 12, 12);
     font-size: 30px;
     margin-top: 50px;
     border: solid 3px rgb(255, 179, 1);
@@ -135,6 +135,7 @@ p {
 
 footer {
     background-color: rgb(14, 12, 12);
+    background-image: linear-gradient(to bottom, rgb(14, 12, 12) 79%, rgb(255, 179, 1));
 }
 
 .menufooter {
