--- a/scss/style.scss
+++ b/scss/style.scss
@@ -179,3 +179,32 @@ footer {
         background-color: #37353b
     }
 }
+@media screen and (max-width: 480px) {
+    #sectionvideo {
+        display: none;
+    }
+}
+@keyframes efecto1 {
+    0%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 1%, rgb(255, 179, 1));}
+    5%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 10%, rgb(255, 179, 1))}
+    10%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 20%, rgb(255, 179, 1))}
+    15%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 30%, rgb(255, 179, 1))}
+    20%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 40%, rgb(255, 179, 1))}
+    25%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 50%, rgb(255, 179, 1))}
+    30%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 60%, rgb(255, 179, 1))}
+    35%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 70%, rgb(255, 179, 1))}
+    40%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 80%, rgb(255, 179, 1))}
+    45%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 90%, rgb(255, 179, 1))}
+    50%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 100%, rgb(255, 179, 1))}
+    55%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 90%, rgb(255, 179, 1))}
+    60%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 80%, rgb(255, 179, 1))}
+    65%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 70%, rgb(255, 179, 1))}
+    70%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 60%, rgb(255, 179, 1))}
+    75%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 50%, rgb(255, 179, 1))}
+    80%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 40%, rgb(255, 179, 1))}
+    85%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 30%, rgb(255, 179, 1))}
+    90%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 20%, rgb(255, 179, 1))}
+    95%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 10%, rgb(255, 179, 1))}
+    100%{ background-image: linear-gradient(to left, rgb(14, 12, 12) 1%, rgb(255, 179, 1))}
+
+}
