--- a/scss/style.scss
+++ b/scss/style.scss
@@ -174,7 +174,9 @@ footer {
     }
 }
 .mainnoti {
-    border: solid 5px rgb(255, 179, 1);
+    img {
+        border: solid 5px rgb(255, 179, 1);
+    }
     .negro {
         background-color: #37353b
     }
