--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,17 @@
+.maingaleria .artistaft1, .maingaleria .familiaft1 {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-around;
+}
+
 * {
   margin: 0%;
   padding: 0%;
 }
 
-nav {
-  background-color: rgb(14, 12, 12);
-}
-nav .menu {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  height: 70px;
-  margin: 0;
-  padding: 0%;
-}
-nav .letramenu {
-  color: rgb(236, 233, 22);
-  text-decoration: none;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 30px;
-  border: solid 3px rgb(236, 233, 22);
-  padding: 5px 10px;
-}
-nav .letramenu:hover {
-  background-image: linear-gradient(to bottom, rgb(14, 12, 12), rgb(255, 179, 1));
+body {
+  overflow-x: hidden;
 }
 
 h1 {
@@ -43,6 +29,31 @@ h1 {
   margin: 0;
 }
 
+nav {
+  background-color: rgb(14, 12, 12);
+}
+nav .menu {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  height: 70px;
+  margin: 0;
+  padding: 0%;
+}
+nav .letramenu {
+  color: rgb(236, 233, 22);
+  border: solid 3px rgb(236, 233, 22);
+  text-decoration: none;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 30px;
+  padding: 5px 10px;
+}
+nav .letramenu:hover {
+  background-image: linear-gradient(to bottom, rgb(14, 12, 12), rgb(255, 179, 1));
+}
+
 h2 {
   text-align: center;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -53,14 +64,6 @@ h2 {
   margin-top: 50px;
   border: solid 3px rgb(255, 179, 1);
   padding: 5px 10px;
-}
-
-#h1index {
-  text-align: center;
-  background-image: url(https://img.freepik.com/vector-gratis/fondo-textura-abstracta-grunge-azul-oscuro-amarillo_91128-1182.jpg?w=2000);
-  background-size: cover;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  color: aliceblue;
 }
 
 main {
@@ -115,27 +118,18 @@ footer .hoverfooter:hover {
   transform: scale(1.5, 1.5);
 }
 
+.maingaleria .titulogal {
+  margin-top: 20px;
+}
 .maingaleria img {
   border: solid 5px rgb(255, 179, 1);
   margin-top: 50px;
-}
-.maingaleria .familiaft1 {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-around;
 }
 .maingaleria .familiaft2 {
   display: flex;
   flex-direction: row;
   align-content: center;
   justify-content: space-evenly;
-}
-.maingaleria .artistaft1 {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-around;
 }
 .maingaleria .artistaft2 {
   display: flex;
