--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-.maingaleria .artistaft1, .maingaleria .familiaft1 {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-around;
-}
-
 * {
   margin: 0%;
   padding: 0%;
@@ -12,6 +5,16 @@
 
 body {
   overflow-x: hidden;
+}
+
+.bodyindex {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.bodynoti {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 h1 {
@@ -47,7 +50,7 @@ nav .letramenu {
   border: solid 3px rgb(236, 233, 22);
   text-decoration: none;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 30px;
+  font-size: 22px;
   padding: 5px 10px;
 }
 nav .letramenu:hover {
@@ -120,22 +123,12 @@ footer .hoverfooter:hover {
 
 .maingaleria .titulogal {
   margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .maingaleria img {
   border: solid 5px rgb(255, 179, 1);
   margin-top: 50px;
-}
-.maingaleria .familiaft2 {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-evenly;
-}
-.maingaleria .artistaft2 {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-evenly;
 }
 
 .mainalbum {
@@ -144,6 +137,7 @@ footer .hoverfooter:hover {
   grid-template-rows: 1fr 530px;
   grid-template-areas: "mayoresexitos sencillos" "albums albums";
   grid-column-gap: 30px;
+  padding-left: 10px;
 }
 .mainalbum h2 {
   margin-bottom: 20px;
@@ -172,6 +166,11 @@ footer .hoverfooter:hover {
 @media screen and (max-width: 480px) {
   #sectionvideo {
     display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  #video {
+    width: 600px;
   }
 }
 @keyframes efecto1 {
