--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
