--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,8 +9,16 @@
 
 body{
     overflow-x: hidden;
+}
+.bodyindex{
+   margin-left: 10px;
+   margin-right: 10px;
   }
   
+  .bodynoti{
+    margin-left: 10px;
+    margin-right: 10px;
+   }
 
   h1{
     text-align: center;
@@ -44,7 +52,7 @@ nav {
         border: map-get($bordes, border ); 
         text-decoration: none;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-size: 30px;
+        font-size: 22px;
         padding: 5px 10px;
     }
     .letramenu:hover {
@@ -93,6 +101,7 @@ main {
     #ultimop {
         margin-bottom: 0%;
     }
+    
 }
 footer {
     background-color: rgb(14, 12, 12);
@@ -122,24 +131,15 @@ footer {
 .maingaleria {
     .titulogal{
         margin-top: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     img {
         border: solid 5px rgb(255, 179, 1);
     margin-top: 50px;
     }
-    .familiaft1 {
-        @extend %spacearound;
-    }
-    .familiaft2 {
-        @include spaceevenly();
-    }
+
     
-    .artistaft1 {
-        @extend %spacearound;
-    }
-    .artistaft2 {
-        @include spaceevenly();
-    }
 }
 .mainalbum {
     display: grid;
@@ -168,6 +168,7 @@ footer {
     .sencillos {
         grid-area: sencillos;
     }
+    padding-left: 10px;
 }
 .mainnoti {
     img {
@@ -182,6 +183,12 @@ footer {
         display: none;
     }
 }
+ @media screen and (max-width: 768px) {
+    #video {
+        width: 600px;
+    }
+ }   
+
 @keyframes efecto1 {
     0%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 1%, rgb(255, 179, 1));}
     5%{ background-image: linear-gradient(to right, rgb(14, 12, 12) 10%, rgb(255, 179, 1))}
